--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -29,7 +29,11 @@
         android:id="@+id/favoriteFragment"
         android:name="com.trial.github_android.ui.favorite.FavoriteFragment"
         android:label="Favorites"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_detailUserFragment"
+            app:destination="@id/detailUserFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.trial.github_android.ui.settings.SettingsFragment"
